[gd_scene load_steps=3 format=3 uid="uid://bqnnet11lljgu"]

[ext_resource type="Script" uid="uid://dxattflvo4v2s" path="res://UI/MainMenu/main_menu.gd" id="1_fw0vt"]
[ext_resource type="FontFile" uid="uid://8xqmbre1fr22" path="res://UI/Assets/Font/Kenney Future Narrow.ttf" id="2_8x0bb"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fw0vt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.105327, 0.379555, 0.541179, 1)

[node name="Title" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -240.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 400

[node name="HBoxContainer" type="HBoxContainer" parent="Title"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Title/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 29
theme_override_fonts/font = ExtResource("2_8x0bb")
theme_override_font_sizes/font_size = 70
text = "MathQuest"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -135.0
offset_top = -77.0
offset_right = 135.0
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="StartGame" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Start Game
"

[node name="Level1" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Level 1
"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Exit
"

[connection signal="pressed" from="PanelContainer/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
